--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 		<!-- Import libraries. -->
 		<script language="JavaScript" type="text/javascript" src="libs/d3.min.js"></script>
+		<script language="JavaScript" type="text/javascript" src="libs/d3.layout.cloud.js"></script>
 	
 		<!-- JS -->
 		<script language="JavaScript" type="text/javascript" src="scripts/behavior.js"></script>
@@ -20,6 +21,6 @@
 	</head>
 
 	<body onload="init();">
-		<div></div>
+		<div id="word_cloud"></div>
 	</body>
 </html>
