--- a/index.html
+++ b/index.html
@@ -23,5 +23,12 @@
 	<body onload="init();">
 		<div id="word_cloud"></div>
 		<div id="dot_plot"></div>
+		<div id="barcharts">
+			<div id="small1"></div> 
+			<div id="small2"></div> 
+			<div id="small3"></div>
+			<div id="small4"></div> 
+			<div id="small5"></div> 
+		</div>
 	</body>
 </html>
