--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
 	</head>
 
 	<body onload="init();">
-		<div id="word_cloud"></div>
+		<div>
+			<div id="word_cloud"></div>
+			<button onclick="reset()">Reset</button>
+		</div>
 		<div id="dot_plot"></div>
 		<div id="barcharts">
 			<div id="small1"></div> 
