--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 	
 		<!-- JS -->
 		<script language="JavaScript" type="text/javascript" src="scripts/behavior.js"></script>
+		<script language="JavaScript" type="text/javascript" src="scripts/wordCloud.js"></script>
+		<script language="JavaScript" type="text/javascript" src="scripts/dotPlot.js"></script>
+		<script language="JavaScript" type="text/javascript" src="scripts/smallMultiples.js"></script>
 
 		<!-- CSS -->
 		<link rel="stylesheet" href="style/styles.css">
