Dot plot legend added

--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
 			<div id="word_cloud"></div>
 			<button onclick="reset()">Reset</button>
 		</div>
-		<div id="dot_plot"></div>
+		<div>
+			<div id="dot_plot"></div>
+			<div id="dot_plot_legend"></div>
+		</div>
 		<div id="barcharts">
 			<div id="small1"></div> 
 			<div id="small2"></div> 
