--- a/index.html
+++ b/index.html
@@ -12,13 +12,12 @@
 		<!-- Import libraries. -->
 		<script language="JavaScript" type="text/javascript" src="libs/d3.min.js"></script>
 		<script language="JavaScript" type="text/javascript" src="libs/d3.layout.cloud.js"></script>
-	
+
 		<!-- JS -->
 		<script language="JavaScript" type="text/javascript" src="scripts/behavior.js"></script>
 		<script language="JavaScript" type="text/javascript" src="scripts/wordCloud.js"></script>
 		<script language="JavaScript" type="text/javascript" src="scripts/dotPlot.js"></script>
 		<script language="JavaScript" type="text/javascript" src="scripts/smallMultiples.js"></script>
-
 		<!-- CSS -->
 		<link rel="stylesheet" href="style/styles.css">
 	</head>
@@ -26,6 +25,9 @@
 	<body onload="init();">
 		<div>
 			<div id="word_cloud"></div>
+			<div class="tag-container">
+				<input  />  <!--ainda nao esta a funcionar com o wordcloud-->
+			</div>
 			<button onclick="reset()">Reset</button>
 		</div>
 		<div id="dot_plot"></div>
@@ -36,5 +38,7 @@
 			<div id="small4"></div> 
 			<div id="small5"></div> 
 		</div>
+		
+		<script language="JavaScript" type="text/javascript" src="scripts/tags.js"></script>
 	</body>
 </html>
