--- a/index.html
+++ b/index.html
@@ -24,27 +24,33 @@
 	</head>
 
 	<body onload="init();">
-		<div style="width: 33%;">
-			<div id="word_cloud_title"></div>
-			<div id="word_cloud"></div>
-			<div class="tag-container">
-				<input  />  <!--ainda nao esta a funcionar com o wordcloud-->
+		<div id="top_bar"></div>
+		<div id="idioms">
+			<div id="word_cloud_container">
+				<div id="word_cloud_title"></div>
+				<div id="word_cloud"></div>
+				<div class="tag-container">
+					<input  />  <!--ainda nao esta a funcionar com o wordcloud-->
+				</div>
+				<button onclick="reset()">Reset</button>
 			</div>
-			<button onclick="reset()">Reset</button>
+			<div id="dot_plot_container">
+				<div id="dot_plot_title"></div>
+				<div id="dot_plot"></div>
+				<div id="dot_plot_legend"></div>
+			</div>
+			<div id="barcharts">
+				<div id="barcharts_title"></div>
+				<div id="small_multiples">
+					<div id="small1"></div> 
+					<div id="small2"></div> 
+					<div id="small3"></div>
+					<div id="small4"></div> 
+					<div id="small5"></div> 
+				</div>	
+			</div>
 		</div>
-		<div style="width: 33%;">
-			<div id="dot_plot_title"></div>
-			<div id="dot_plot"></div>
-			<div id="dot_plot_legend"></div>
-		</div>
-		<div style="width: 33%;" id="barcharts">
-			<div id="barcharts_title"></div>
-			<div id="small1" style="position: relative;"></div> 
-			<div id="small2"></div> 
-			<div id="small3"></div>
-			<div id="small4"></div> 
-			<div id="small5"></div> 
-		</div>
+		
 		
 		<script language="JavaScript" type="text/javascript" src="scripts/tags.js"></script>
 		<script language="JavaScript" type="text/javascript" src="scripts/autocomplete.js"></script>
