Bottom idioms placeholders

--- a/index.html
+++ b/index.html
@@ -26,19 +26,25 @@
 	<body onload="init();">
 		<div id="top_bar"></div>
 		<div id="idioms">
-			<div id="word_cloud_container">
-				<div id="word_cloud_title"></div>
-				<div id="word_cloud"></div>
-				<div class="tag-container">
-					<input  />  <!--ainda nao esta a funcionar com o wordcloud-->
+			<div id="left_idioms">
+				<div id="top_idioms">
+					<div id="word_cloud_container">
+						<div id="word_cloud_title"></div>
+						<div id="word_cloud"></div>
+						<div class="tag-container">
+							<input  />
+						</div>
+						<button onclick="reset()">Reset</button>
+					</div>
+					<div id="dot_plot_container">
+						<div id="dot_plot_title"></div>
+						<div id="dot_plot"></div>
+						<div id="dot_plot_legend"></div>
+					</div>
 				</div>
-				<button onclick="reset()">Reset</button>
+				<div id="bottom_idioms"></div>
 			</div>
-			<div id="dot_plot_container">
-				<div id="dot_plot_title"></div>
-				<div id="dot_plot"></div>
-				<div id="dot_plot_legend"></div>
-			</div>
+			
 			<div id="barcharts">
 				<div id="barcharts_title"></div>
 				<div id="small_multiples">
