Bigger font sizes and ellipsis in small multiples' game names

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 	<head>
 		<meta charset="utf-8">
 		
-		<meta name="description" content="Boilerplate for Laboratory Exercises">
-		<meta name="author" content="Faculty">
+		<meta name="description" content="G44">
+		<meta name="author" content="90714 - Filipe Sousa; 90737 - João Galveias; 90762 - Pedro Vilela">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-		<title>Boilerplate</title>
+		<title>G44</title>
 
 		<!-- Import libraries. -->
 		<script language="JavaScript" type="text/javascript" src="libs/d3.min.js"></script>
