--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 	</head>
 
 	<body onload="init();">
+		<h2 id="title">Steam Game Data</h2>
 		<div id="top_bar"></div>
 		<div id="idioms">
 			<div id="left_idioms">
