Search bar moved to bottom of dashboard

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 	</head>
 
 	<body onload="init();">
+		<div class="body_background">
 		<div id="top_bar"></div>
 		<div id="idioms">
 			<div id="left_idioms">
@@ -35,10 +36,7 @@
 						<div class="idiom_background">
 							<div id="word_cloud_title"></div>
 							<div id="word_cloud"></div>
-							<div class="tag-container">
-								<input/>
-							</div>
-							<button onclick="reset()">Reset</button>
+							
 						</div>
 					</div>
 					<div id="dot_plot_container" class="idiom_container">
@@ -65,8 +63,12 @@
 				</div>
 			</div>
 		</div>
-		
-		
+		<div class="tag-container">
+			<input/>
+		</div>
+		<button onclick="reset()" class="reset_button">Reset</button>
+		</div>
+			
 		<script language="JavaScript" type="text/javascript" src="scripts/tags.js"></script>
 		<script language="JavaScript" type="text/javascript" src="scripts/autocomplete.js"></script>
 	</body>
