--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<div class="tag-container">
 						<input/>
 					</div>
-					<button onclick="reset()">Reset</button>
+					<button id="resetButton" onclick="reset()">Reset</button>
 				</div>
 			</div>
 			<div id="leftColumn">
