diverging plot (not updating data)

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		<script language="JavaScript" type="text/javascript" src="scripts/wordCloud.js"></script>
 		<script language="JavaScript" type="text/javascript" src="scripts/dotPlot.js"></script>
 		<script language="JavaScript" type="text/javascript" src="scripts/smallMultiples.js"></script>
+		<script language="JavaScript" type="text/javascript" src="scripts/divergingPlot.js"></script>
 		<script language="JavaScript" type="text/javascript" src="scripts/behavior.js"></script>
 		
 		<!-- CSS -->
@@ -58,7 +59,14 @@
 								</div>
 							</div>
 						</div>
-						<div id="bottom_idioms"></div>
+						<div id="bottom_idioms">
+							<div id="diverging_plot_container" class="idiom_container">
+								<div class="idiom_background">
+									<div id="diverging_plot_title"></div>
+									<div id="diverging_plot"></div>
+								</div>
+							</div>
+						</div>
 					</div>
 					
 					<div id="barcharts" class="idiom_container">
