--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<!-- Import libraries. -->
 		<script language="JavaScript" type="text/javascript" src="libs/d3.min.js"></script>
 		<script language="JavaScript" type="text/javascript" src="libs/d3.layout.cloud.js"></script>
+		<script src="https://unpkg.com/d3-simple-slider"></script>
 
 		<!-- JS -->
 		<script language="JavaScript" type="text/javascript" src="scripts/math.js"></script>
@@ -20,6 +21,7 @@
 		<script language="JavaScript" type="text/javascript" src="scripts/smallMultiples.js"></script>
 		<script language="JavaScript" type="text/javascript" src="scripts/divergingPlot.js"></script>
 		<script language="JavaScript" type="text/javascript" src="scripts/behavior.js"></script>
+		<script language="JavaScript" type="text/javascript" src="scripts/timeSlider.js"></script>
 		
 		<!-- CSS -->
 		<link rel="stylesheet" href="style/styles.css">
@@ -40,7 +42,9 @@
 				</div>
 			</div>
 			<div id="leftColumn">
-				<div id="top_bar"></div>
+				<div id="top_bar">
+					<div id="time_slider"></div>
+				</div>
 				<div id="idioms">
 					<div id="left_idioms">
 						<div id="top_idioms">
