--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		<script language="JavaScript" type="text/javascript" src="scripts/dotPlot.js"></script>
 		<script language="JavaScript" type="text/javascript" src="scripts/smallMultiples.js"></script>
 		<script language="JavaScript" type="text/javascript" src="scripts/divergingPlot.js"></script>
+		<script language="JavaScript" type="text/javascript" src="scripts/parallel.js"></script>
 		<script language="JavaScript" type="text/javascript" src="scripts/behavior.js"></script>
 		
 		<!-- CSS -->
@@ -64,6 +65,12 @@
 								<div class="idiom_background">
 									<div id="diverging_plot_title"></div>
 									<div id="diverging_plot"></div>
+								</div>
+							</div>
+							<div id="parallel_container" class="idiom_container">
+								<div class="idiom_background">
+									<div id="parallel_title"></div>
+									<div id="parallel"></div>
 								</div>
 							</div>
 						</div>
